news feed update

--- a/Front-end/src/app/newsfeed/newsfeed.component.html
+++ b/Front-end/src/app/newsfeed/newsfeed.component.html
@@ -42,7 +42,8 @@
                 </div>
             </div>
             <div class="event_container">
-                <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
+                <div class="event-img"> 
+                    <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
                 </div>
                 <div class="event-desc"> 
                     <div class="event_title">Mathematic, Statistics and Applied Science</div>
@@ -53,54 +54,9 @@
         </div>
         <div class="title"><span><a routerLink="/courses" style="color: white; text-decoration: none;"> Trainnings </a></span></div>
         <app-prev-trainnings></app-prev-trainnings>
-        <!--
-        <div class="sort">
-            <label class="sort-label" for="sort">Sort by:</label>
-            <select class="sort-select" name="" id="sort">
-                <option value="">Nearest</option>
-                <option value="">Newest</option>
-            </select>
-        </div>
-        <div class="event">
-            <div class="event_container">
-                <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
-                </div>
-                <div class="event-desc"> 
-                    <div class="event_title">Course title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
-                </div>
-            </div>
-            <div class="event_container">
-                <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
-                </div>
-                <div class="event-desc"> 
-                    <div class="event_title">Courses title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
-                </div>
-            </div>
-            <div class="event_container">
-                <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
-                </div>
-                <div class="event-desc"> 
-                    <div class="event_title">Courses title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
-                </div>
-            </div>
-            <div class="event_container">
-                <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
-                </div>
-                <div class="event-desc"> 
-                    <div class="event_title">Courses title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
-                </div>
-            </div>
-        </div>
-        -->
         <div class="title"><span>JOB OFFERS</span></div>
+        <app-prev-jobs></app-prev-jobs>
+        <!--
         <div class="event">
             <div class="event_container job">
                 <div class="event-desc"> 
@@ -133,7 +89,9 @@
                     <p>Provider : john doe</p>
                 </div>
             </div>
+            
         </div>
+        -->
     </div>
     
 </div>
