--- a/Front-end/src/app/groups/view-group/view-group.component.html
+++ b/Front-end/src/app/groups/view-group/view-group.component.html
@@ -9,14 +9,7 @@
                 <div class="user_info">Joined from : mai 2020</div>
             </div>
             -->
-            <div class="groups_list">
-                <div class="list_title">Groupes</div>
-                <div class="list">
-                    <div><i class="fas fa-users"></i> Emploi maroc</div>
-                    <div><i class="fas fa-users"></i> Linked maroc</div>
-                    <div><i class="fas fa-users"></i> Software & Technology</div>
-                </div>
-            </div>
+            <app-prev-groups></app-prev-groups>
         
         </div>
         <div class="main_section">
