--- a/Front-end/src/app/courses/view-course/view-course.component.css
+++ b/Front-end/src/app/courses/view-course/view-course.component.css
@@ -1,21 +1,34 @@
-.course{
+.course_wrapper{
     width: 500px;
     height: 400px;
-    display: grid;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
     color: black;
-    grid-template-columns: 30% 60%;
-    column-gap: 10%;
+    border: 3px solid black;
+    border-radius: 5px;
+}
+
+.exit{
+    align-self: flex-end;
+    cursor: pointer;
+    padding: 10px;
+}
+.course{
+    
+    display: grid;
+    
+    grid-template-columns: 40% 55%;
+    column-gap: 5%;
     padding: 20px;
 }
 
 .image{
-    width: 130px;
-    height: 300px;
-    
+    width: 180px;
+    height: 250px;
 }
 .image img{
-    width: 150px;
-    height: 300px;
+    width: 180px;
+    height: 250px;
     margin-right: 10px;
 }
