--- a/Front-end/src/app/home-page/home-page.component.css
+++ b/Front-end/src/app/home-page/home-page.component.css
@@ -138,7 +138,7 @@
 }
 
 .desc2>i{
-    color: rgb(255, 187, 0);
+    color:red;
     font-size: x-large;
 }
 
@@ -166,7 +166,7 @@
 .hub>.more{
     margin-top: 40px;
     cursor: pointer;
-    color: rgb(0, 140, 255);
+    color:green;
     font-size: 1.1em;
 }
 
@@ -211,7 +211,7 @@ hr{
 }
 
 .hub_content>div>i{
-    color: rgb(0, 140, 255);
+    color:red;
     margin-top: 20px;
     margin-bottom: 20px;
 }
