--- a/Front-end/src/app/home-page/home-page.component.html
+++ b/Front-end/src/app/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <div class="content_container">
         <div class="content_welcome">
             <div class="content_description">
-                <div class="description">Tomorrow is another day to make an impact, It's up to us to change it with confidence and responsibility</div>
+                <div class="description">Tomorrow is another day. <br> To make an impact, It's up to us to change it with confidence and responsibility</div>
             </div>
             <div class="content_details">
                 <div><i class="fas fa-check"></i> Utilize ressources to develop yourself and evoluate</div>
@@ -33,15 +33,14 @@
         <div class="hub">
             <div class="description">Different services to help you develop your line of business securely</div>
             <div class="hub_content">
-                <div><i class="fas fa-wallet"></i> Investment Rain</div>
-                <div><i class="fas fa-tasks"></i> Boost startup</div>
-                <div><i class="fas fa-truck"></i> Suppliers River</div>
+                <div><i class="fas fa-cloud-rain"></i> Investment Rain</div>
+                <div><i class="fas fa-water"></i> Suppliers River</div>
                 <div><i class="fas fa-map-marked-alt"></i>Business Maps</div>
-                <div><i class="fas fa-warehouse"></i> Business ware</div>
-                <div><i class="fas fa-user-friends"></i> Business peers</div>
-                <div><i class="fas fa-briefcase"></i> Find job</div>
-                <div><i class="fas fa-search-dollar"></i> Market place</div>
+                <div><i class="fas fa-user-friends"></i> Business Peers</div>
+                <div><i class="fas fa-search-dollar"></i> Market Place</div>
                 <div><i class="fas fa-coffee"></i> Collaboration Lake</div>
+                <div><i class="fas fa-tasks"></i> Boost Startup</div>
+                <div><i class="fas fa-briefcase"></i> Find Job</div>
             </div>
             <div class="more">View more services</div>
         </div>
@@ -51,21 +50,21 @@
         <div class="hub">
             <div class="description">All the resources you will need to develop yourself and evoluate</div>
             <div class="hub_content">
-                <div><i class="fas fa-tint"></i> Rain Drop</div>
-                <div><i class="far fa-file"></i> Verisign cv-tech Cloud</div>
+                <div><i class="fas fa-tint"></i>  Skills Rain Drop</div>
+                <div><i class="far fa-file"></i> Verisign Cv-tech Cloud</div>
                 <div><i class="fas fa-book"></i> Library Fountain</div>
-                <div><i class="fab fa-slideshare"></i> Live plans</div>
-                <div><i class="far fa-question-circle"></i> Support</div>
                 <div><i class="fas fa-chalkboard-teacher"></i>Formation River</div>
                 <div><i class="fas fa-microphone"></i> Conferences Brook</div>
+                <div><i class="far fa-question-circle"></i> Support</div>
             </div>
             <div class="more">View more resources</div>
         </div>
     </div>
     <div class="hub_container">
-        <div class="title"><hr>Dare to innovate<hr></div>
+        <div class="title"><hr>Dare to innovate <hr></div>
         <div class="hub">
-            <div class="description">Get out from your comfort zone and dare to innovate</div>
+            <div class="description">Get out from your comfort zone and dare to innovate (in construction)</div>
+
             <div class="hub_content">
                 <div>Modernization</div>
                 <div>Optimization</div>
