--- a/Front-end/src/app/post/view-posts/view-posts.component.html
+++ b/Front-end/src/app/post/view-posts/view-posts.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="spans">
             <span class="username"><a [routerLink]="['/profile',post.userName]">{{post.firstName}} {{post.lastName}}</a> 
-                <i *ngIf="post.verifiedUser" style="color: #5151fd; margin-left: 6px; font-size: 0.7em;" class="fas fa-check-circle"></i>
+                <i *ngIf="post.verifiedUser" style="color: black; margin-left: 6px; font-size: 0.7em;" class="fas fa-check-circle"></i>
             </span>
             <span class="duration"> {{post.duration}} </span>
         </div>
