--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -28,16 +28,17 @@
 }
 
 .submit{
-    padding: 6px 12px;
-    background-color: rgb(48, 131, 187);
+    width: 100px;
+    height: 30px;
+    background-color:black;
     color: white;
+    border: 2px solid red;
     font-weight: bold;
     border-radius: 10px;
-    border-style: none;
 }
 
 .submit:hover{
-    background-color: rgb(109, 142, 240);
+    background-color:black;
 }
 
 .submit i {
@@ -54,14 +55,14 @@
     font-weight: bold;
     border-bottom: 1px solid grey;
     margin-bottom: 10px;
-    color: #3083bb;
+    color: black;
 }
 
 .pers{
     margin: 15px auto;
     font-size: large;
     font-weight: bold;
-    color: rgb(48, 131, 187);
+    color: black;
 }
 .profile-img{
     /*background-image: url('/assets/profil.jfif');*/
@@ -96,7 +97,7 @@
 
 .info span i{
     font-size: large;
-    color: rgb(48, 131, 187);
+    color: red;
     margin-right: 20px;
 }
 
@@ -107,11 +108,11 @@
 
 .update>button{
     padding: 6px 12px;
-    background-color: rgb(48, 131, 187);
+    background-color: black;
+    border: 2px solid red;
     color: white;
     font-weight: bold;
     border-radius: 10px;
-    border-style: none;
 }
 
 input[type="file"]{
@@ -121,9 +122,9 @@ input[type="file"]{
 .buttons>label,.upload{
     padding: 6px 8px;
     color: white;
-    background-color: rgb(90, 123, 212);
+    background-color:black;
     cursor: pointer;
-    border: none;
+    border: 2px solid red;
     text-align: center;
     opacity: 0.7;
 }
@@ -151,7 +152,7 @@ input[type="file"]{
     margin-bottom: 5px;
     width: 100%;
     height: 30px;
-    background-color: rgb(105, 105, 211);
+    background-color: rgba(0, 0, 0, 0.712);
     color: white;
     display: flex;
     align-items: center;
@@ -161,7 +162,7 @@ input[type="file"]{
 }
 
 .option:hover{
-    background-color: rgb(84, 84, 197);
+    background-color:black;
 }
 
 
@@ -187,7 +188,7 @@ input[type="file"]{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #3083bb;
+    border: 2px solid red;
     border-radius: 10px;
 }
 
@@ -215,15 +216,15 @@ input[type="file"]{
 .conn_view button{
     padding: 3px 12px;
     color: white;
-    background-color: #3083bb;
+    background-color: black;
     border: none;
     outline: none;
     font-weight: bold;
 }
 
 .conn_view button:hover{
-    color: #3083bb;
-    border: 2px solid #3083bb;
+    color: black;
+    border: 2px solid black;
     background-color: white;
 }
 
