--- a/Front-end/src/app/groups/create-group/create-group.component.css
+++ b/Front-end/src/app/groups/create-group/create-group.component.css
@@ -1,6 +1,5 @@
 .group_wrapper{
     width: 500px;
-    height: 350px;
     position: absolute;
     background-color: white;
     left: 0;
@@ -50,6 +49,8 @@
     background-color: #dbdbdb;
     display: flex;
     justify-content: flex-end;
+
+    margin-bottom: 0;
 }
 .footer>button{
     background-color: black;
@@ -83,7 +84,19 @@ input[type="file"]{
     border: 2px solid black;
 }
 .img img{
-    width: 87px;
-    height: 87px;
+    width: 88px;
+    height: 88px;
     position: relative;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    padding: 10px;
+    resize: none;
+}
+
+.name input{
+    width: 300px;
+    padding: 10px;
 }
