--- a/Front-end/src/app/header/header.component.css
+++ b/Front-end/src/app/header/header.component.css
@@ -8,6 +8,18 @@
     color: rgb(95, 95, 95);
 }
 
+.nav_border{
+    width: 100%;
+    height: 5px;
+    border-bottom: 3px solid green;
+}
+
+.nav_border2{
+    width: 100%;
+    height: 5px;
+    border-bottom: 3px solid red;
+}
+
 .logo{
     display: flex;
     justify-content: space-between;
@@ -229,4 +241,10 @@
 }
 .link>a:hover{
     color: rgb(207, 207, 207);
+}
+
+.username{
+    color: black;
+    text-decoration: none;
+    
 }
