--- a/Front-end/src/app/jobs/job-details/job-details.component.css
+++ b/Front-end/src/app/jobs/job-details/job-details.component.css
@@ -14,8 +14,8 @@ span {
 button{
     height: 30px;
     width: 100px;
-    color: royalblue;
-    border: 2px solid royalblue;
+    color: black;
+    border: 2px solid black;
     background-color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -24,5 +24,5 @@ button{
 
 button:hover{
     color: white;
-    background-color: royalblue;
+    background-color: black;
 }
