--- a/Front-end/src/app/jobs/view-jobs/view-jobs.component.css
+++ b/Front-end/src/app/jobs/view-jobs/view-jobs.component.css
@@ -29,7 +29,7 @@
     padding: 6px 15px;
     height: 35px;
     border-radius: 15px;
-    border: 1px solid royalblue;
+    border: 1px solid black;
 }
 
 .search i {
@@ -40,14 +40,14 @@
 }
 
 i{
-    color: royalblue;
+    color: red;
 }
 
 .search_button button{
     width: 80px;
     color: white;
-    background-color: royalblue;
-    border: none;
+    background-color: black;
+    border: 2px solid red;
     height: 35px;
     border-radius: 15px;
 }
@@ -55,8 +55,8 @@ i{
 .add_job button{
     width: 200px;
     height: 35px;
-    color: royalblue;
-    border: 2px solid royalblue;
+    color: red;
+    border: 2px solid red;
     border-radius: 15px;
     margin-left: 20px;
 }
