--- a/Front-end/src/app/post/view-posts/view-posts.component.css
+++ b/Front-end/src/app/post/view-posts/view-posts.component.css
@@ -48,19 +48,20 @@
     width: 170px;
 }
 .likes{
-    color: rgb(71, 97, 170);
+    /*color: rgb(71, 97, 170);*/
+    color: black;
     margin-right: 10px;
     display: flex;
     width: 31%;
     justify-content: space-between;
 }
 .comments{
-    color: rgb(71, 97, 170);
+    color: black;
 }
 .reactions_container .add_like{
     display: flex;
     width: 9%;
-    color: #4761aa;
+    color: black;
     justify-content: space-between;
     
 }
