--- a/Front-end/src/app/resume/resume.component.css
+++ b/Front-end/src/app/resume/resume.component.css
@@ -7,7 +7,7 @@ input[type="file"]{
     font-weight: bold;
     border-bottom: 1px solid grey;
     margin-bottom: 10px;
-    color: #3083bb;
+    color: black;
 }
 
 .options{
@@ -22,16 +22,20 @@ input[type="file"]{
 
 
 .upload,.options>label{
-    padding: 6px 12px;
+    
     width: 100px;
     height: 30px;
-    background-color: rgb(48, 131, 187);
+    background-color: black;
+
     color: white;
     font-weight: bold;
     border-radius: 10px;
-    border: none;
+    border: 2px solid red;
     cursor: pointer;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 button{
