--- a/Front-end/src/app/trainings/trainings.component.css
+++ b/Front-end/src/app/trainings/trainings.component.css
@@ -34,7 +34,6 @@
 }
 
 .topic>span{
-    color: royalblue;
     justify-self: center;
     align-self: center;
     padding: 20px 0;
@@ -73,14 +72,14 @@
 .create>button{
     padding: 10px 20px;
     color: white;
-    background-color: royalblue;
-    border: 2px solid white;
+    background-color: red;
+    border: 2px solid black;
 }
 .create>button:hover{
     padding: 10px 20px;
-    color: royalblue;
+    color: black;
     background-color: white;
-    border: 2px solid royalblue;
+    border: 2px solid red;
 }
 
 .courses_wrapper{
@@ -91,7 +90,6 @@
 .courses_wrapper>span{
     display: flex;
     justify-content: center;
-    color: royalblue;
     padding: 30px 0;
     font-size: xx-large;
 }
@@ -110,12 +108,10 @@
     width: 200px;
     padding: 6px 15px;
     border-radius: 15px;
-    border: 1px solid royalblue;
+    border: 2px solid black;
 }
 
-.name_filter input:focus{
-    border: 3px solid royalblue;
-}
+
 .name_filter i {
     position: absolute;
     right: 15px;
@@ -124,7 +120,7 @@
 }
 
 .name_filter i:hover {
-    color: royalblue;
+    color: gray;
 }
 
 .date_filter{
@@ -135,7 +131,7 @@
     width: 180px;
     border-radius: 15px;
     padding: 6px 15px;
-    border: 1px solid royalblue;
+    border: 2px solid black;
     outline: none;
 }
 .date_filter>label{
@@ -158,7 +154,7 @@
 .sort-select{
     border-radius: 15px;
     padding: 4px 15px;
-    border: 1px solid royalblue;
+    border: 2px solid black;
     outline: none;
 }
 
@@ -173,6 +169,7 @@
     margin: 0 auto;
     column-gap: 30px;
     row-gap: 30px;
+    height: 600px;
 }
 
 .course{
@@ -180,7 +177,7 @@
     width: 300px;
     display: flex;
     flex-direction: column;
-    border: 2px solid royalblue;
+    border: 2px solid red;
     border-radius: 7px;
     outline: none;
     padding-bottom: 20px;
@@ -216,21 +213,21 @@
 
 .details button{
     color: white;
-    background-color: royalblue;
+    background-color: black;
     border: none;
     outline: none;
     padding: 2px 6px;
     border-radius: 5px;
 }
 .details button:hover{
-    background-color: #6180df;
+    background-color: rgb(78, 78, 78);
 }
 
 .course_details{
     position: absolute;
     z-index: 1;
     left: 50%;
-    top: 175%;
+    top: 165%;
     transform: translate(-50%, 0);
 
 }
@@ -271,7 +268,7 @@
     height: 250px;
     margin-right: 30px;
     position: relative;
-    border: 1px solid royalblue;
+    border: 2px solid red;
     background-position: center;
     background-size: cover;
 }
@@ -291,7 +288,7 @@
     justify-content: flex-end;
 }
 .footer>button{
-    background-color: royalblue;
+    background-color: black;
     color: white;
     font-weight: bold;
     padding: 4px;
