--- a/Front-end/src/app/users-list/users-list.component.css
+++ b/Front-end/src/app/users-list/users-list.component.css
@@ -1,6 +1,6 @@
 .users_wrapper{
     width: 70%;
-    height: 700px;
+    height: 1000px;
     margin: 0 auto;
 }
 
@@ -52,13 +52,15 @@
 .users{
     padding: 30px 0;
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(5,1fr);
     column-gap: 20px;
+    row-gap: 20px;
+    height: 600px;
 }
 
 .user{
-    width: 150px;
-    height: 200px;
+    width: 180px;
+    height: 230px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,6 +73,7 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    margin-bottom: 20px;
 }
 
 ::ng-deep mat-select-country.country{
