--- a/Front-end/src/app/auth/login/login.component.css
+++ b/Front-end/src/app/auth/login/login.component.css
@@ -19,3 +19,73 @@
     color: aliceblue;
 }
 
+/* ********************************************************************************* */
+
+.login_wrapper {
+    width: 700px;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid red;
+    background-color: whitesmoke;
+    margin-bottom: 400px;
+}
+
+.header{
+    width: 65%;
+    height: 60px;
+    text-align: center;
+    
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 10px auto;
+}
+
+.input_section{
+    width: 45%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    margin: 0 auto;
+    font-size: 1.1em;
+}
+
+.input_section>input{
+    width: 200px;
+    height: 35px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid black;
+    
+}
+
+.footer{
+    padding: 20px 0;
+    width: 45%;
+    margin: 0 auto;
+}
+
+.footer>.submit{
+    height: 40px;
+}
+
+.footer button{
+    padding: 5px 20px ;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+.footer button:hover{
+    border: 2px solid red;
+}
+
+.footer a {
+    color: red;
+}
+
+
+
