--- a/Front-end/src/app/notifications/notifications.component.css
+++ b/Front-end/src/app/notifications/notifications.component.css
@@ -11,6 +11,8 @@
 }
 .notification:hover{
     background-color: rgb(192, 192, 192);
+    color: black;
+    border: 2px solid black;
 }
 
 .notifications_container{
@@ -36,9 +38,11 @@
 .notif{
     font-family: sans-serif;
     background-color: white;
-    padding: 5px;
+    padding: 14px;
     cursor: pointer;
     border-top: 1px solid #797878;
+    display: flex;
+    align-items: center;
 }
 .notif:hover{
     background-color: rgb(223, 223, 223);
@@ -54,8 +58,13 @@
     font-size: x-small;
     top: 45px;
     color: white;
-    padding: 2px 3px;
+    padding: 0 4px;
     background-color: red;
     border-radius: 50%;
     margin-left: 17px;
+}
+
+.notif > .icon{
+    font-size: 1.8em;
+    margin-right: 10px;
 }
